// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmountInput renders correctly 1`] = `
[
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist-Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginVertical": 8,
      }
    }
    testID="label"
  >
    Amount
  </Text>,
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={false}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#3c4d9d0f",
            "borderRadius": 8,
            "padding": 16,
          },
          undefined,
          undefined,
          {
            "padding": 0,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityRole="none"
        accessible={true}
        style={
          {
            "padding": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
              }
            }
            testID="listitemcolumn"
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              hitSlop={
                {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
              testID="amount-input"
            >
              <Text
                accessibilityRole="text"
                adjustsFontSizeToFit={true}
                numberOfLines={1}
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 24,
                    "letterSpacing": 0,
                    "lineHeight": 32,
                  }
                }
              >
                $
                100.50
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`AmountInput renders correctly with currency selector 1`] = `
[
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist-Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginVertical": 8,
      }
    }
    testID="label"
  >
    Amount
  </Text>,
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={false}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#3c4d9d0f",
            "borderRadius": 8,
            "padding": 16,
          },
          undefined,
          undefined,
          {
            "padding": 0,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityRole="none"
        accessible={true}
        style={
          {
            "padding": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
              }
            }
            testID="listitemcolumn"
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              hitSlop={
                {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
              testID="amount-input"
            >
              <Text
                accessibilityRole="text"
                adjustsFontSizeToFit={true}
                numberOfLines={1}
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 24,
                    "letterSpacing": 0,
                    "lineHeight": 32,
                  }
                }
              >
                $
                100.50
              </Text>
            </View>
          </View>
          <View
            accessible={false}
            style={
              {
                "width": 16,
              }
            }
            testID="listitem-gap"
          />
          <View
            style={
              {
                "flex": 0,
                "marginLeft": 8,
              }
            }
            testID="listitemcolumn"
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={
                {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
              testID="select-currency"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Bold",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  USD
                </Text>
                <SvgMock
                  color="#686e7d"
                  fill="currentColor"
                  height={16}
                  name="ArrowDown"
                  style={
                    {
                      "height": 16,
                      "marginLeft": 8,
                      "width": 16,
                    }
                  }
                  width={16}
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`AmountInput renders loading state correctly 1`] = `
[
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist-Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginVertical": 8,
      }
    }
    testID="label"
  >
    Amount
  </Text>,
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={false}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#3c4d9d0f",
            "borderRadius": 8,
            "padding": 16,
          },
          undefined,
          undefined,
          {
            "padding": 0,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityRole="none"
        accessible={true}
        style={
          {
            "padding": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
              }
            }
            testID="listitemcolumn"
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              hitSlop={
                {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
              testID="amount-input"
            >
              <View
                style={
                  [
                    {
                      "backgroundColor": "#858b9a14",
                      "borderRadius": 30,
                      "padding": 14,
                    },
                    undefined,
                    undefined,
                    undefined,
                    {
                      "width": "50%",
                    },
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`AmountInput renders loading state correctly with currency selector 1`] = `
[
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist-Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginVertical": 8,
      }
    }
    testID="label"
  >
    Amount
  </Text>,
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={false}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#3c4d9d0f",
            "borderRadius": 8,
            "padding": 16,
          },
          undefined,
          undefined,
          {
            "padding": 0,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityRole="none"
        accessible={true}
        style={
          {
            "padding": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
              }
            }
            testID="listitemcolumn"
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              hitSlop={
                {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
              testID="amount-input"
            >
              <View
                style={
                  [
                    {
                      "backgroundColor": "#858b9a14",
                      "borderRadius": 30,
                      "padding": 14,
                    },
                    undefined,
                    undefined,
                    undefined,
                    {
                      "width": "50%",
                    },
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              />
            </View>
          </View>
          <View
            accessible={false}
            style={
              {
                "width": 16,
              }
            }
            testID="listitem-gap"
          />
          <View
            style={
              {
                "flex": 0,
                "marginLeft": 8,
              }
            }
            testID="listitemcolumn"
          >
            <View
              style={
                [
                  {
                    "backgroundColor": "#858b9a14",
                    "borderRadius": 30,
                    "padding": 14,
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  {
                    "width": "30%",
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>,
]
`;
